<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/dashboard_icon"
        android:title="@string/Admin_navigation_text1" />
    <item
        android:id="@+id/nav_admin_manager"
        android:icon="@drawable/admin_icon"
        android:title="@string/Admin_navigation_text2" />
    <item
        android:id="@+id/nav_user_manager"
        android:icon="@drawable/user_manager"
        android:title="@string/Admin_navigation_text3" />
    <item
        android:id="@+id/nav_product_add"
        android:icon="@drawable/add_product"
        android:title="@string/Admin_navigation_text4" />
    <item
        android:id="@+id/nav_product_view"
        android:icon="@drawable/update_product"
        android:title="@string/Admin_navigation_text5" />
    <item
        android:id="@+id/nav_order_manager"
        android:icon="@drawable/order_manage"
        android:title="@string/Admin_navigation_text6" />
    <item
        android:id="@+id/nav_delivery_manager"
        android:icon="@drawable/delivery_manager"
        android:title="@string/Admin_navigation_text7" />
    <item
        android:id="@+id/nav_completed_orders"
        android:icon="@drawable/completd_orders"
        android:title="@string/Admin_navigation_text8" />

</menu>