<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.OrderViewActivity">

    <TextView
        android:id="@+id/orderIdView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/oswald_bold"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderProductView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/orderIdView"
        app:layout_constraintTop_toBottomOf="@+id/orderIdView" />

    <TextView
        android:id="@+id/userNameOder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semi_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="@+id/orderIdView"
        app:layout_constraintTop_toTopOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/userMobileOder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semi_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView60"
        app:layout_constraintEnd_toEndOf="@+id/userNameOder"
        app:layout_constraintTop_toTopOf="@+id/textView60" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/mapViewOder"
        app:layout_constraintTop_toBottomOf="@+id/mapViewOder" />

    <TextView
        android:id="@+id/distanceKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semi_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView66"
        app:layout_constraintEnd_toEndOf="@+id/userMobileOder"
        app:layout_constraintTop_toTopOf="@+id/textView66" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/userMobileOder"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView60" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View7"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/orderProductView"
        app:layout_constraintStart_toStartOf="@+id/orderProductView"
        app:layout_constraintTop_toBottomOf="@+id/orderProductView" />

    <FrameLayout
        android:id="@+id/mapViewOder"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/orderProductView"
        app:layout_constraintStart_toStartOf="@+id/orderProductView"
        app:layout_constraintTop_toBottomOf="@+id/textView69">

    </FrameLayout>

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View5"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView66"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <TextView
        android:id="@+id/deliveryPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semi_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView70"
        app:layout_constraintEnd_toEndOf="@+id/distanceKm"
        app:layout_constraintTop_toTopOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View6"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView70"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/totalPriceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_semi_bold"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView72"
        app:layout_constraintEnd_toEndOf="@+id/deliveryPrice"
        app:layout_constraintTop_toTopOf="@+id/textView72" />

    <Button
        android:id="@+id/orderCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/inactive_red"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View8"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/orderConform"
        app:layout_constraintStart_toStartOf="@+id/mapViewOder"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <Button
        android:id="@+id/orderConform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/themColour1"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Order_View9"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/orderCancel"
        app:layout_constraintEnd_toEndOf="@+id/mapViewOder"
        app:layout_constraintStart_toEndOf="@+id/orderCancel"
        app:layout_constraintTop_toTopOf="@+id/orderCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>