<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themColour2"
    tools:context=".ClayBricksAdminActivity">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_activity_style4" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        app:srcCompat="@drawable/admin_page_style1" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Admin_page_text1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editAdminEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Admin_page_text2"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAdminEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/user_mail"
            android:drawablePadding="5dp"
            android:ems="15"
            android:fontFamily="@font/oswald_semi_bold"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sentVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/themColour1"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/Admin_page_text3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/editAdminEmail"
        app:layout_constraintStart_toStartOf="@+id/editAdminEmail"
        app:layout_constraintTop_toBottomOf="@+id/editAdminEmail" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="145dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/claybricklogo" />

</androidx.constraintlayout.widget.ConstraintLayout>